--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "immutable-devtools",
   "version": "1.0.0",
-  "description": "",
+  "description": "Chrome DevTools custom formatter for Immutable.js's persistent data structures",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/formatter.js",
+    "demo": "budo demo/demo.js --open --title \"Immutable.js Dev Tools Formatter\""
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Daniele Polencic <daniele.polencic@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
+    "budo": "^8.0.2",
     "tape": "^4.4.0"
   },
   "dependencies": {
